优化删除
